openshift/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    maintainer: 'Aly Ibrahim <aly@redhat.com>'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/AlyIbrahim/hello-node.git'
    alpha.image.policy.openshift.io/resolve-names: '*'
  name: hello-node
  labels:
    app: hello-node
    app.kubernetes.io/component: hello-node
    app.kubernetes.io/instance: hello-node
    app.kubernetes.io/part-of: hello-node-app
    app.openshift.io/runtime-namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-node
        deploymentconfig: hello-node
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: hello-node
          image: >-
                  quay.io/aibrahim/hello-node:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
