openshift/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    maintainer: 'Aly Ibrahim <aly@redhat.com>'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/AlyIbrahim/hello-node.git'
  name: hello-node
  labels:
    app: hello-node
    app.kubernetes.io/component: hello-node
    app.kubernetes.io/instance: hello-node
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: hello-node
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '12'
spec:
  to:
    kind: Service
    name: hello-node
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
